--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 // fake ajax call
                 setTimeout(function(){
-                    FakeProgress.doNext = true;
+                    FakeProgress.runNext();
                 }, 1500)
 
             },
