--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <b id="percent"></b>
     <span id="step"></span>
 </div>
-<button onclick="progressRun(580)">Start</button>
+<button onclick="progressRun(10000)">Start</button>
 <button onclick="progressPause()">Pause</button>
 <button onclick="progressContinue()">Continue</button>
 
@@ -28,6 +28,8 @@
 
     var progressExample = new ProgressProcess();
 
+    var percentElement = document.getElementById('percent');
+    var stepElement = document.getElementById('step');
     function progressRun(stepCount, stepCurrent) {
         stepCurrent = (stepCurrent || 1);
         progressExample.start({
@@ -42,14 +44,12 @@
                     if (result) {
                         progress.next();
                     }
-                }, 100);
+                }, 50);
 
             },
             showCallback: function (percent, stepCurrent, stepCount) {
-                var elemPercent = document.getElementById('percent');
-                var elemStep = document.getElementById('step');
-                elemPercent.innerHTML = percent + '%';
-                elemStep.innerHTML = '( Step ' + stepCurrent + ' of ' + stepCount + ': complete)';
+                percentElement.innerHTML = percent + '%';
+                stepElement.innerHTML = '( Step ' + stepCurrent + ' of ' + stepCount + ': complete)';
             }
         });
     }
